v1.1.0/modules/schema/pages/class/WindGenType3aIEC.adoc
= `WindGenType3aIEC`
:toclevels: 4


+++IEC type 3A generator set model.
Reference: IEC 61400-27-1:2015, 5.6.3.2.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:WindGenType3aIEC`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]
*** *`WindGenType3aIEC`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<WindTurbineType4IEC,`WindTurbineType4IEC`>>
//| [[slots_table.WindTurbineType4IEC]]<<WindTurbineType4IEC,`WindTurbineType4IEC`>>
| 0..1 +
xref::class/WindTurbineType4IEC.adoc[`WindTurbineType4IEC`]
| +++Wind turbine type 4 model with which this wind generator type 3A model is associated.+++
| _n/a_

| <<kpc,`kpc`>>
//| [[slots_table.kpc]]<<kpc,`kpc`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Current PI controller proportional gain (<i>K</i><i><sub>Pc</sub></i>). It is a type-dependent parameter.+++
| _n/a_

| <<tic,`tic`>>
//| [[slots_table.tic]]<<tic,`tic`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Current PI controller integration time constant (<i>T</i><i><sub>Ic</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++
| _n/a_

| <<WindTurbineType3IEC,`WindTurbineType3IEC`>>
//| [[slots_table.WindTurbineType3IEC]]<<WindTurbineType3IEC,`WindTurbineType3IEC`>>
| 0..1 +
xref::class/WindTurbineType3IEC.adoc[`WindTurbineType3IEC`]
| +++Wind turbine type 3 model with which this wind generator type 3 is associated.+++
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]

| <<dipmax,`dipmax`>>
//| [[slots_table.dipmax]]<<dipmax,`dipmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum active current ramp rate (<i>di</i><i><sub>pmax</sub></i>). It is a project-dependent parameter.+++
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]

| <<diqmax,`diqmax`>>
//| [[slots_table.diqmax]]<<diqmax,`diqmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum reactive current ramp rate (<i>di</i><i><sub>qmax</sub></i>). It is a project-dependent parameter.+++
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]

| <<xs,`xs`>>
//| [[slots_table.xs]]<<xs,`xs`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Electromagnetic transient reactance (<i>x</i><i><sub>S</sub></i>). It is a type-dependent parameter.+++
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dipmax]
=== `dipmax`
+++Maximum active current ramp rate (<i>di</i><i><sub>pmax</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3IEC.dipmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]


|===

////
[.text-left]
--
<<slots_table.dipmax,&#10548;>>
--
////


//[discrete]
[#diqmax]
=== `diqmax`
+++Maximum reactive current ramp rate (<i>di</i><i><sub>qmax</sub></i>). It is a project-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3IEC.diqmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]


|===

////
[.text-left]
--
<<slots_table.diqmax,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#kpc]
=== `kpc`
+++Current PI controller proportional gain (<i>K</i><i><sub>Pc</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3aIEC.kpc`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.kpc,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tic]
=== `tic`
+++Current PI controller integration time constant (<i>T</i><i><sub>Ic</sub></i>) (&gt;= 0). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3aIEC.tic`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tic,&#10548;>>
--
////


//[discrete]
[#WindTurbineType3IEC]
=== `WindTurbineType3IEC`
+++Wind turbine type 3 model with which this wind generator type 3 is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3IEC.WindTurbineType3IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindTurbineType3IEC.adoc[`WindTurbineType3IEC`]

| Inherited from
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]


|===

////
[.text-left]
--
<<slots_table.WindTurbineType3IEC,&#10548;>>
--
////


//[discrete]
[#WindTurbineType4IEC]
=== `WindTurbineType4IEC`
+++Wind turbine type 4 model with which this wind generator type 3A model is associated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3aIEC.WindTurbineType4IEC`
| Cardinality
| 0..1
| Type
| xref::class/WindTurbineType4IEC.adoc[`WindTurbineType4IEC`]


|===

////
[.text-left]
--
<<slots_table.WindTurbineType4IEC,&#10548;>>
--
////


//[discrete]
[#xs]
=== `xs`
+++Electromagnetic transient reactance (<i>x</i><i><sub>S</sub></i>). It is a type-dependent parameter.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:WindGenType3IEC.xs`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/WindGenType3IEC.adoc[`WindGenType3IEC`]


|===

////
[.text-left]
--
<<slots_table.xs,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/WindTurbineType4IEC.adoc[`WindTurbineType4IEC`] | xref::class/WindTurbineType4IEC.adoc#WindGenType3aIEC[`WindGenType3aIEC`]


|===

